# cars_api

./: .env.example  README.md  backend.dockerfile  docker-compose.yaml  pyproject.toml
api/: mixins.py  pagination.py  permissions.py  service.py
api/v1/cars/: serializers.py  urls.py  views.py
api/v1/cars/tests/: test_views.py
api/v1/users/: mixins.py  serializers.py  urls.py  views.py
api/v1/users/tests/: test_views.py
cars/: admin.py  models.py  tasks.py
cars/migrations/: 0001_initial.py  0002_initial.py
core/: celery.py  settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
users/utils/: hashers.py
